This big rework!!!!

--- a/config.ini
+++ b/config.ini
@@ -49,6 +49,7 @@ create_db = BEGIN TRANSACTION;
 	"notice"	TEXT,
 	"date_of_last_post"	INTEGER,
 	"message_id"	INTEGER,
+	"chat_status"    TEXT,
 	FOREIGN KEY("owner_id") REFERENCES "users"("chat_id") ON DELETE CASCADE
 	);
 	CREATE TABLE IF NOT EXISTS "users" (
