--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Telegram]
-token = 712946725:AAE6EjVC43vBBeN3h0jI94RrN1TWUdbjeXE
+token = ""
 main_channel_id = -1001442816449
 main_channel_name = @Test_channel
 main_channel_link = https://t.me/joinchat/AAAAAFX_ocFmoSzB-dlKPA
@@ -7,7 +7,7 @@ check_chat_id = -1001333806885
 check_chat_link = https://t.me/joinchat/CgQNBBQvIYDUpBqOErc74w
 check_chat_name = @new_group
 time_limit = 16
-admin = mlx342
+admin = ""
 
 [Telemetr-headers]
 host = telemetr.me
@@ -24,8 +24,8 @@ upgrade-insecure-requests = 1
 cookie = hash=K4vnx7EYk6jGZUncNxMbMgjLAThpyFYi
 
 [Telemetr]
-login = neggod@ya.ru
-password = q1w2e3r4t5y6
+login = ""
+password = ""
 login_url = https://telemetr.me/login/
 statistic_url = https://telemetr.me/analytics/
 
