--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,5 @@
 [Telegram]
-<<<<<<< HEAD
 token = 712946725:AAH77zoycS56NQUx1q-jIWHDrbbvknBE084
-=======
-token = ""
->>>>>>> 17c10d487b5d666c6b39b68e410139e892d6b9f9
 main_channel_id = -1001442816449
 main_channel_name = @Test_channel
 main_channel_link = https://t.me/joinchat/AAAAAFX_ocFmoSzB-dlKPA
@@ -11,7 +7,7 @@ check_chat_id = -1001333806885
 check_chat_link = https://t.me/joinchat/CgQNBBQvIYDUpBqOErc74w
 check_chat_name = @new_group
 time_limit = 16
-admin = ""
+admin = mlx342
 
 [Telemetr-headers]
 host = telemetr.me
@@ -28,8 +24,8 @@ upgrade-insecure-requests = 1
 cookie = hash=K4vnx7EYk6jGZUncNxMbMgjLAThpyFYi
 
 [Telemetr]
-login = ""
-password = ""
+login = neggod@ya.ru
+password = q1w2e3r4t5y6
 login_url = https://telemetr.me/login/
 statistic_url = https://telemetr.me/analytics/
 
