Test without check 1000 ss

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ check_chat_id = -1001333806885
 check_chat_link = https://t.me/joinchat/CgQNBBQvIYDUpBqOErc74w
 check_chat_name = @new_group
 time_limit = 16
-admin =
+admin = neggod
 
 [Telemetr-headers]
 host = telemetr.me
@@ -21,7 +21,6 @@ origin = https://telemetr.me
 connection = keep-alive
 referer = https://telemetr.me/
 upgrade-insecure-requests = 1
-cookie = hash=K4vnx7EYk6jGZUncNxMbMgjLAThpyFYi
 
 [Telemetr]
 login = neggod@ya.ru
