--- a/config.ini
+++ b/config.ini
@@ -21,10 +21,11 @@ origin = https://telemetr.me
 connection = keep-alive
 referer = https://telemetr.me/
 upgrade-insecure-requests = 1
+cookie = hash=K4vnx7EYk6jGZUncNxMbMgjLAThpyFYi
 
 [Telemetr]
 login = neggod@ya.ru
-password = q1w2e3r4t5y6
+password = t,b123uectq321
 login_url = https://telemetr.me/login/
 statistic_url = https://telemetr.me/analytics/
 
