--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,24 @@
+#  Строки начинающиеся с # или ; не читаются. Это комментарии. Их не надо редактировать или удалять.
+
 [Telegram]
-token = 712946725:AAH77zoycS56NQUx1q-jIWHDrbbvknBE084
-main_channel_id = -1001442816449
-main_channel_name = @Test_channel
-main_channel_link = https://t.me/joinchat/AAAAAFX_ocFmoSzB-dlKPA
-check_chat_id = -1001333806885
-check_chat_link = https://t.me/joinchat/CgQNBBQvIYDUpBqOErc74w
-check_chat_name = @new_group
-time_limit = 16
-admin = neggod
+; токен бота менять здесь
+token = 876906385:AAFfHqs7IVPqL-V_bNic6ckIv3k450Rz2mk
+; это данные канала. ID не трогать!!!, ссылку на канал
+; и название менять тут (это для отображения при нажатии кнопки "Посмотреть объявления")
+main_channel_id = -1001282213362
+main_channel_name = @Проверенные каналы BIGBoss
+main_channel_link = https://t.me/ok_bigboss
+; это данные чата. ID не трогать!!!, ссылку на чат
+; и название менять тут (это для отображения при нажатии кнопки "Посмотреть объявления")
+check_chat_id = -1001349799456
+check_chat_link = https://t.me/bigbossbirzha
+check_chat_name = @Биржа Рекламы BIG Boss
+; медленный режим в часах. менять здесь или через бота
+time_limit = 3
+admin = mlx342
 
 [Telemetr-headers]
+; Лучше не трогать. После 1го захода на телеметр добавится поле Cookies
 host = telemetr.me
 user-agent = Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:72.0) Gecko/20100101 Firefox/72.0
 accept = text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
@@ -21,15 +30,17 @@ origin = https://telemetr.me
 connection = keep-alive
 referer = https://telemetr.me/
 upgrade-insecure-requests = 1
-cookie = hash=K4vnx7EYk6jGZUncNxMbMgjLAThpyFYi
 
 [Telemetr]
+; Логин и пароль от сайта https://telemetr.me/ нужны, чтобы пройти авторизацию
+; без авторизации инфу о канале\чате не даёт
 login = neggod@ya.ru
 password = t,b123uectq321
 login_url = https://telemetr.me/login/
 statistic_url = https://telemetr.me/analytics/
 
 [sqlite_db]
+; при первом обращении юзера создаёт базу данных
 name = users.db
 create_db = BEGIN TRANSACTION;
 	PRAGMA foreign_keys = on;
@@ -58,4 +69,3 @@ create_db = BEGIN TRANSACTION;
 	"username"	TEXT
 	);
 	COMMIT;
-
